--- a/biopage.html
+++ b/biopage.html
@@ -17,7 +17,7 @@
                         <p>B</p>
                         <p> I</p>
                         <p>O</p>
-                     </div>
+                    </div>
                     <div class="content-words-flex-box">
                         <div class="what-i-am-doing">
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat dolores minima sed reprehenderit quisquam eaque quidem blanditiis veniam similique qui! Ipsum nisi corporis quas est, eveniet amet sapiente explicabo quisquam!</p>
@@ -34,14 +34,14 @@
                         <div class="menu-flex-box">
                             
                             <div class="dropdown">
-                                    <button class="dropbutton">雪</button>
-                                    <div class="dropdown-content">
-                                      <a href="http://127.0.0.1:5500/portfolio.html"><i class="fas fa-home fa-sm" id="ihome"></i></a>
-                                      <a href="http://127.0.0.1:5500/biopage.html#"><i class="fas fa-address-card fa-sm " id="ibio"></i></a>
-                                      <a href="http://127.0.0.1:5500/skillspage.html"><i class="fas fa-chess fa-sm" id="ichess"></i></a>
-                                      <a href="http://127.0.0.1:5500/contact.html"><i class="fas fa-handshake fa-sm " id="icontact"></i></a>
-                                    </div>
-                                  </div>
+                                <div class="menu-word">雪</div>
+                                <div class="dropdown-content">
+                                    <a href="http://127.0.0.1:5500/portfolio.html"><i class="fas fa-home fa-sm" id="ihome"></i></a>
+                                    <a href="http://127.0.0.1:5500/biopage.html"><i class="fas fa-address-card fa-sm" id="ibio"></i></a>
+                                    <a href="http://127.0.0.1:5500/skillspage.html"><i class="fas fa-chess fa-sm" id="ichess"></i></a>
+                                    <a href="http://127.0.0.1:5500/contact.html"><i class="fas fa-handshake fa-sm " id="icontact"></i></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="logo-box">
@@ -51,7 +51,7 @@
                     </div>
                     <div class="page-number-icon">
                         <div class="page-number-flex-box">
-                                <a href="https://stackoverflow.com/questions/26814297/want-to-make-font-awesome-icons-clickable"> <i class="fas fa-address-card fa-3x " id="ihome"></i></a>
+                            <a href="http://127.0.0.1:5500/biopage.html"> <i class="fas fa-address-card fa-3x " id="ibio"></i></a>
                         </div>
                     </div>
                 </div>
