--- a/biopage.html
+++ b/biopage.html
@@ -71,10 +71,10 @@
                             <div class="dropdown">
                                 <div class="menu-word">雪</div>
                                 <div class="dropdown-content">
-                                    <a href="http://127.0.0.1:5500/portfolio.html"><i class="fas fa-home fa-sm" id="ihome"></i></a>
-                                    <a href="http://127.0.0.1:5500/biopage.html"><i class="fas fa-address-card fa-sm" id="ibio"></i></a>
-                                    <a href="http://127.0.0.1:5500/skillspage.html"><i class="fas fa-chess fa-sm" id="ichess"></i></a>
-                                    <a href="http://127.0.0.1:5500/contact.html"><i class="fas fa-handshake fa-sm " id="icontact"></i></a>
+                                    <a href="portfolio.html"><i class="fas fa-home fa-sm" id="ihome"></i></a>
+                                    <a href="biopage.html"><i class="fas fa-address-card fa-sm" id="ibio"></i></a>
+                                    <a href="skillspage.html"><i class="fas fa-chess fa-sm" id="ichess"></i></a>
+                                    <a href="contact.html"><i class="fas fa-handshake fa-sm " id="icontact"></i></a>
                                 </div>
                             </div>
                         </div>
