--- a/skillspage.html
+++ b/skillspage.html
@@ -16,10 +16,10 @@
                     
                     <div class="menu-word">雪</div>
                     <div class="dropdown-content">
-                        <a href="http://127.0.0.1:5500/portfolio.html"><i class="fas fa-home fa-3x" id="ihome"></i></a>
-                        <a href="http://127.0.0.1:5500/biopage.html"><i class="fas fa-address-card fa-3x" id="ibio"></i></a>
-                        <a href="http://127.0.0.1:5500/skillspage.html"><i class="fas fa-chess fa-3x" id="ichess"></i></a>
-                        <a href="http://127.0.0.1:5500/contact.html"><i class="fas fa-handshake fa-3x " id="icontact"></i></a>
+                        <a href="portfolio.html"><i class="fas fa-home fa-3x" id="ihome"></i></a>
+                        <a href="biopage.html"><i class="fas fa-address-card fa-3x" id="ibio"></i></a>
+                        <a href="skillspage.html"><i class="fas fa-chess fa-3x" id="ichess"></i></a>
+                        <a href="contact.html"><i class="fas fa-handshake fa-3x " id="icontact"></i></a>
                     </div>
                 </div>
             </div>
