--- a/biopage.html
+++ b/biopage.html
@@ -86,7 +86,7 @@
                     </div>
                     <div class="page-number-icon">
                         <div class="page-number-flex-box">
-                            <a href="http://127.0.0.1:5500/biopage.html"> <i class="fas fa-address-card fa-3x " id="ibio"></i></a>
+                            <a href="biopage.html"> <i class="fas fa-address-card fa-3x " id="ibio"></i></a>
                         </div>
                     </div>
                 </div>
