--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
             <div class="menu-box">
                 <div class="menu-word">
                     
-                    <a href="http://127.0.0.1:5500/portfolio.html">雪</a> 
+                    <a href="portfolio.html">雪</a> 
                 </div>
             </div>
             <div class="page-number-icon-box">
@@ -51,7 +51,7 @@
                                 <input type="email" placeholder="email" name="_replyto" id="emailform">
                                 <br>
                                 <br>
-                                <label for="blog">Message :</label>
+                                <label for="blog">Message : </label>
                                 <input type="blog" placeholder="message" name="message" id="messageform">
                                 <br>
                                 <br>
@@ -65,3 +65,5 @@
         </div>
     </body>
     </html>
+
+
