--- a/biopage.html
+++ b/biopage.html
@@ -71,10 +71,10 @@
                             <div class="dropdown">
                                 <div class="menu-word">雪</div>
                                 <div class="dropdown-content">
-                                    <a href="portfolio.html"><i class="fas fa-home fa-sm" id="ihome"></i></a>
-                                    <a href="biopage.html"><i class="fas fa-address-card fa-sm" id="ibio"></i></a>
-                                    <a href="skillspage.html"><i class="fas fa-chess fa-sm" id="ichess"></i></a>
-                                    <a href="contact.html"><i class="fas fa-handshake fa-sm " id="icontact"></i></a>
+                                    <a href="portfolio.html"><i class="fas fa-home" style="font-size: 4vh;" id="ihome"></i></a>
+                                    <a href="biopage.html"><i class="fas fa-address-card" style="font-size: 4vh;"  id="ibio"></i></a>
+                                    <a href="skillspage.html"><i class="fas fa-chess" style="font-size: 4vh;"  id="ichess"></i></a>
+                                    <a href="contact.html"><i class="fas fa-handshake" style="font-size: 4vh;" id="icontact"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -86,7 +86,7 @@
                     </div>
                     <div class="page-number-icon">
                         <div class="page-number-flex-box">
-                            <a href="biopage.html"> <i class="fas fa-address-card fa-3x " id="ibio"></i></a>
+                            <a href="biopage.html"> <i class="fas fa-address-card " style="font-size: 4.5vh;" id="ibio"></i></a>
                         </div>
                     </div>
                 </div>
